--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-paper": "^5.0.0-rc.4",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
+  "type": "module",
   "private": true
 }
